[metadata]
name = mtunnel
author = Marlin Forbes
author_email = marlinf@datashaman.com
summary = Creates multiple background SSH tunnels for services within a project and stage.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/datashaman/mtunnel
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    ssh
    ssh-tunnel

[files]
packages =
    mtunnel
data_files =
    etc/ =
        mtunnel.yml.example

[entry_points]
console_scripts =
    mtunnel = mtunnel:main
